@@ -24,7 +24,7 @@ INCPATH=$(INCPATH) /I$(STK)
 # compiler definitions and flags
 DEFS=/DFLEXT_SYS=2 $(UFLAGS)
 
-CFLAGS=/GX /GD /G6 
+CFLAGS=/GX /GD /G6 /arch:SSE
 OFLAGS=/Ox
 DFLAGS=/Od /Zi
 
