@@ -35,7 +35,7 @@ const t_symbol *flext::sym_signal = NULL;
 int flext::Version() { return FLEXT_VERSION; }
 const char *flext::VersionStr() { return FLEXT_VERSTR; }
 
-void flext::FLEXT_SETUPFUNC()
+void flext::Setup()
 {
 	static bool issetup = false;
 	if(issetup) 
